<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="cc.gnaixx.aviplayer.MainActivity">

    <EditText
        android:id="@+id/et_file_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/file_name_hit"
        android:text="@string/file_name_text">
        <requestFocus/>
    </EditText>

    <RadioGroup
        android:id="@+id/rg_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rbtn_bitmap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/bitmap_player_radio"/>

        <RadioButton
            android:id="@+id/rbtn_opengl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/opengl_player_radio"/>

        <RadioButton
            android:id="@+id/rbtn_window"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/window_player_radio"/>

    </RadioGroup>

    <Button
        android:id="@+id/btn_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_btn"/>


</LinearLayout>
